--- a/resources/sass/backend/_variables.scss
+++ b/resources/sass/backend/_variables.scss
@@ -1,4 +1,8 @@
 // Variable overrides
 
+$sidebar-nav-link-hover-bg:           #4285F4;
+$sidebar-nav-link-active-bg:           #4285F4;
+$sidebar-nav-link-active-icon-color: #fff;
+
 $cyan: #17a2b8;
 $info: $cyan;
