--- a/resources/views/frontend/find_color/clone_css.html
+++ b/resources/views/frontend/find_color/clone_css.html
@@ -14,6 +14,14 @@
                 <textarea name="" id="display_find_color" cols="200" rows="10"></textarea>
                 <p>Category</p><br>
                 <textarea name="" id="display_category" cols="200" rows="10"></textarea>
+                <p>Ý Tưởng</p><br>
+                <textarea name="" id="display_y_tuong" cols="200" rows="10"></textarea>
+                <p>Danh Mục sản phẩm</p><br>
+                <textarea name="" id="display_category_product" cols="200" rows="10"></textarea>
+                <p>List Sản phẩm</p><br>
+                <textarea name="" id="display_list_product" cols="200" rows="10"></textarea>
+                <p>Chi Tiết Sản phẩm</p><br>
+                <textarea name="" id="display_detail_product" cols="200" rows="10"></textarea>
             </div>
         </div>
         <div id="home">
@@ -43,8 +51,31 @@
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__aD3_gSmd5qRTY-WWrYHU87zl4PZUZDXoJLzJOWg9HSI__nhmRN7kiSHUfoKZw3CGJcdKgizAi7XejBBhN9xlHrXI__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__AuE0zpjILclZVFocL-ZM_YXQWNoEoAVRINeuje2TfMs__sJjd_Hk7JHvFHc9oGZN1umGSO06armIXgPwfzwRjp9o__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
         </div>
+        <div id="category_product">
+            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__OexypFlT8flXz7FvooRgD3G-vlZUrFWY6iwAavQYb9g__uxC-ewtvp27vm6fOpO0YNr4pXT0awmP7N9aDX6TYj8o__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a> 
+            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__BUKp1YBkiJCiTzrHIrRo6368Wj_UdH1gGLNe8fVvkOo__yN0qmw_84YWfViKBWGHnlTE1b4uhhEsYnsUyhRsEags__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a> 
+            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__Dzaf0U5ip5vc9JqcEko9Xu6OGopccClFn6T14epBOhg__d-hSiSUl7KMhpkIqy1lRJl3NgbGB9iJLz7hqcWAHRiY__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a> 
+            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__c8c4Dby7BHs--ueweizLsw9cZbEzDLO84Wo0GuqjaUE__duojKLhylv656LUETSHuKqQbbJo19g6dJh8VkhdDekA__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a> 
+            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__JSgPFJTl55zJts0Vtv_EzWyzlsSfyTI2nWAi400An3Y__ZwNMOv7kkzvhk_uU0YnpnzfFb9zbOOtkCU2HIDj04Pk__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a> 
+            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__aD3_gSmd5qRTY-WWrYHU87zl4PZUZDXoJLzJOWg9HSI__nhmRN7kiSHUfoKZw3CGJcdKgizAi7XejBBhN9xlHrXI__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a> 
+            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__AuE0zpjILclZVFocL-ZM_YXQWNoEoAVRINeuje2TfMs__sJjd_Hk7JHvFHc9oGZN1umGSO06armIXgPwfzwRjp9o__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a> 
+
+        </div>
+        <div id="y_tuong">
+            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__4EbVblBhHnWEIMpD8Tawl4Vphv-36blJBwzlU_57IF8__TMjtw3y4-X1s077ePg-bfjhGGV3xaf1Uosf8EknqJr4__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css" /></a> 
+            <a class="link_css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800" /></a> 
+            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__BUKp1YBkiJCiTzrHIrRo6368Wj_UdH1gGLNe8fVvkOo__yN0qmw_84YWfViKBWGHnlTE1b4uhhEsYnsUyhRsEags__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css" /></a> 
+            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__Dzaf0U5ip5vc9JqcEko9Xu6OGopccClFn6T14epBOhg__d-hSiSUl7KMhpkIqy1lRJl3NgbGB9iJLz7hqcWAHRiY__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css" /></a> 
+            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__c8c4Dby7BHs--ueweizLsw9cZbEzDLO84Wo0GuqjaUE__duojKLhylv656LUETSHuKqQbbJo19g6dJh8VkhdDekA__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css" /></a> 
+            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__JSgPFJTl55zJts0Vtv_EzWyzlsSfyTI2nWAi400An3Y__ZwNMOv7kkzvhk_uU0YnpnzfFb9zbOOtkCU2HIDj04Pk__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css" /></a> 
+            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__aD3_gSmd5qRTY-WWrYHU87zl4PZUZDXoJLzJOWg9HSI__nhmRN7kiSHUfoKZw3CGJcdKgizAi7XejBBhN9xlHrXI__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css" /></a> 
+            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__iW147tHv1qaS4jveQgrzW-4C-hZq8stS3RMnloRkg6Q__uqcVND_Mvj1baBqjCyS9glvlkzJ4vG9UTLjj6vGbsak__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css" /></a>        
+        </div>
     </body>
-    <script type="text/javascript" src="./jquery.js">
+    <script
+    src="https://code.jquery.com/jquery-3.3.1.js"
+    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous">
     </script>
     <script type="text/javascript">
         function displayListCssLink (links) {
@@ -73,7 +104,11 @@
             let pageCss = {
                 home: [],
                 category: [],
-                find_color: []
+                find_color: [],
+                category_product: [],
+                list_product: [],
+                detail_product: [],
+                y_tuong: [],
             };
             for (let page in pageCss) {
                 $('#' + page).find('.link_css').each((idx, link) => {
@@ -85,7 +120,6 @@
                 });
             }
             let text = displayListCssLink(listAllCss);
-            
             $('#display_all_css').html(text);
             for(let page in pageCss) {
                 let pageCssText = displayPageCssMappingAll(pageCss[page], listAllCss);
