chia nhỏ bố cục,lấy css offline...

--- a/resources/views/frontend/find_color/clone_css.html
+++ b/resources/views/frontend/find_color/clone_css.html
@@ -42,7 +42,7 @@
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__aD3_gSmd5qRTY-WWrYHU87zl4PZUZDXoJLzJOWg9HSI__nhmRN7kiSHUfoKZw3CGJcdKgizAi7XejBBhN9xlHrXI__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__RbX8M1dgg9T40XrEzC_RmJJAXDcMZxItvaVGj9Apvm4__PUKhey-5McA29iKRdeXlMVwLJEnAUOm43xGqg8WjCUQ__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
         </div>
-        <div id="category">
+        <!-- <div id="category">
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__OexypFlT8flXz7FvooRgD3G-vlZUrFWY6iwAavQYb9g__uxC-ewtvp27vm6fOpO0YNr4pXT0awmP7N9aDX6TYj8o__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__BUKp1YBkiJCiTzrHIrRo6368Wj_UdH1gGLNe8fVvkOo__1TLAuKAa8WpvOLIVsaqUJ3C9fAG0bfQMThvr2o0jbw4__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__Dzaf0U5ip5vc9JqcEko9Xu6OGopccClFn6T14epBOhg__d-hSiSUl7KMhpkIqy1lRJl3NgbGB9iJLz7hqcWAHRiY__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
@@ -50,7 +50,7 @@
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__VQbnJCr9ZUrtXUE2H8HPvCoJcRiVMDANLejqyAVpM0I__2uJ91tDQBoQZaWq7J73M-LNK8zVTE29F9ep0QvAqbzo__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__aD3_gSmd5qRTY-WWrYHU87zl4PZUZDXoJLzJOWg9HSI__nhmRN7kiSHUfoKZw3CGJcdKgizAi7XejBBhN9xlHrXI__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__AuE0zpjILclZVFocL-ZM_YXQWNoEoAVRINeuje2TfMs__sJjd_Hk7JHvFHc9oGZN1umGSO06armIXgPwfzwRjp9o__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
-        </div>
+        </div> -->
         <div id="category_product">
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__OexypFlT8flXz7FvooRgD3G-vlZUrFWY6iwAavQYb9g__uxC-ewtvp27vm6fOpO0YNr4pXT0awmP7N9aDX6TYj8o__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a> 
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__BUKp1YBkiJCiTzrHIrRo6368Wj_UdH1gGLNe8fVvkOo__yN0qmw_84YWfViKBWGHnlTE1b4uhhEsYnsUyhRsEags__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a> 
@@ -63,7 +63,6 @@
         </div>
         <div id="y_tuong">
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__4EbVblBhHnWEIMpD8Tawl4Vphv-36blJBwzlU_57IF8__TMjtw3y4-X1s077ePg-bfjhGGV3xaf1Uosf8EknqJr4__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css" /></a> 
-            <a class="link_css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800" /></a> 
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__BUKp1YBkiJCiTzrHIrRo6368Wj_UdH1gGLNe8fVvkOo__yN0qmw_84YWfViKBWGHnlTE1b4uhhEsYnsUyhRsEags__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css" /></a> 
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__Dzaf0U5ip5vc9JqcEko9Xu6OGopccClFn6T14epBOhg__d-hSiSUl7KMhpkIqy1lRJl3NgbGB9iJLz7hqcWAHRiY__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css" /></a> 
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__c8c4Dby7BHs--ueweizLsw9cZbEzDLO84Wo0GuqjaUE__duojKLhylv656LUETSHuKqQbbJo19g6dJh8VkhdDekA__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css" /></a> 
