cập nhật trang con sản phẩm,sửa lỗi css trang home,....

--- a/resources/views/frontend/find_color/clone_css.html
+++ b/resources/views/frontend/find_color/clone_css.html
@@ -26,49 +26,85 @@
         </div>
         <div id="home">
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__LS73L6Mz0k0xLcQFoebNUa0lfGrtuhZ7qp2Zch9Z1Yw__FLeU_hfb4JXR-bXmQKc7A2Sd4SooIczvFtU59A-gLuU__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
+            <!-- <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800" media="all" /> -->
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__BUKp1YBkiJCiTzrHIrRo6368Wj_UdH1gGLNe8fVvkOo__yN0qmw_84YWfViKBWGHnlTE1b4uhhEsYnsUyhRsEags__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__Dzaf0U5ip5vc9JqcEko9Xu6OGopccClFn6T14epBOhg__d-hSiSUl7KMhpkIqy1lRJl3NgbGB9iJLz7hqcWAHRiY__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__c8c4Dby7BHs--ueweizLsw9cZbEzDLO84Wo0GuqjaUE__duojKLhylv656LUETSHuKqQbbJo19g6dJh8VkhdDekA__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__JSgPFJTl55zJts0Vtv_EzWyzlsSfyTI2nWAi400An3Y__ZwNMOv7kkzvhk_uU0YnpnzfFb9zbOOtkCU2HIDj04Pk__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__aD3_gSmd5qRTY-WWrYHU87zl4PZUZDXoJLzJOWg9HSI__nhmRN7kiSHUfoKZw3CGJcdKgizAi7XejBBhN9xlHrXI__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
+            <!-- <style type="text/css" media="all">
+                #sliding-popup.sliding-popup-bottom,#sliding-popup.sliding-popup-bottom .eu-cookie-withdraw-banner,.eu-cookie-withdraw-tab{background:#0779BF;}#sliding-popup.sliding-popup-bottom.eu-cookie-withdraw-wrapper{background:transparent}#sliding-popup .popup-content #popup-text h1,#sliding-popup .popup-content #popup-text h2,#sliding-popup .popup-content #popup-text h3,#sliding-popup .popup-content #popup-text p,.eu-cookie-compliance-more-button,.eu-cookie-compliance-secondary-button,.eu-cookie-withdraw-tab{color:#ffffff !important;}.eu-cookie-withdraw-tab{border-color:#ffffff;}
+            </style> -->
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__VFWvYqJ794YCTf-V46giCLDnoJXJL9Ij79JoK8AtiNI__cc3X63d7_sHVfHiwuocz1yVxsajcbPDtDoN-LimboUo__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
         </div>
         <div id="find_color">
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__OexypFlT8flXz7FvooRgD3G-vlZUrFWY6iwAavQYb9g__uxC-ewtvp27vm6fOpO0YNr4pXT0awmP7N9aDX6TYj8o__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
+            <!-- <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800" media="all" /> -->
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__BUKp1YBkiJCiTzrHIrRo6368Wj_UdH1gGLNe8fVvkOo__yN0qmw_84YWfViKBWGHnlTE1b4uhhEsYnsUyhRsEags__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__tG63SO-w4_PKjLaoHHIb9vkOuo6fjNAVQ1FiyN2Kf5g__XPlgx2jzhg-2LfuKGLXrmVSDhzHhdRFLpCYt7oO-6Ok__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__c8c4Dby7BHs--ueweizLsw9cZbEzDLO84Wo0GuqjaUE__duojKLhylv656LUETSHuKqQbbJo19g6dJh8VkhdDekA__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__JSgPFJTl55zJts0Vtv_EzWyzlsSfyTI2nWAi400An3Y__ZwNMOv7kkzvhk_uU0YnpnzfFb9zbOOtkCU2HIDj04Pk__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__aD3_gSmd5qRTY-WWrYHU87zl4PZUZDXoJLzJOWg9HSI__nhmRN7kiSHUfoKZw3CGJcdKgizAi7XejBBhN9xlHrXI__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
+            <!-- <style type="text/css" media="all">
+                #sliding-popup.sliding-popup-bottom,#sliding-popup.sliding-popup-bottom .eu-cookie-withdraw-banner,.eu-cookie-withdraw-tab{background:#0779BF;}#sliding-popup.sliding-popup-bottom.eu-cookie-withdraw-wrapper{background:transparent}#sliding-popup .popup-content #popup-text h1,#sliding-popup .popup-content #popup-text h2,#sliding-popup .popup-content #popup-text h3,#sliding-popup .popup-content #popup-text p,.eu-cookie-compliance-more-button,.eu-cookie-compliance-secondary-button,.eu-cookie-withdraw-tab{color:#ffffff !important;}.eu-cookie-withdraw-tab{border-color:#ffffff;}
+            </style> -->
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__RbX8M1dgg9T40XrEzC_RmJJAXDcMZxItvaVGj9Apvm4__PUKhey-5McA29iKRdeXlMVwLJEnAUOm43xGqg8WjCUQ__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
         </div>
-        <!-- <div id="category">
-            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__OexypFlT8flXz7FvooRgD3G-vlZUrFWY6iwAavQYb9g__uxC-ewtvp27vm6fOpO0YNr4pXT0awmP7N9aDX6TYj8o__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
-            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__BUKp1YBkiJCiTzrHIrRo6368Wj_UdH1gGLNe8fVvkOo__1TLAuKAa8WpvOLIVsaqUJ3C9fAG0bfQMThvr2o0jbw4__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
-            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__Dzaf0U5ip5vc9JqcEko9Xu6OGopccClFn6T14epBOhg__d-hSiSUl7KMhpkIqy1lRJl3NgbGB9iJLz7hqcWAHRiY__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
-            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__kYRNzFNl5MS_zcCiEclweNIx86XfVjECP3DI6mZA7jY__Sd68VNOVENDwzRktmw7HEgutFscDJ6dykYL9uQ4-nI4__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
-            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__VQbnJCr9ZUrtXUE2H8HPvCoJcRiVMDANLejqyAVpM0I__2uJ91tDQBoQZaWq7J73M-LNK8zVTE29F9ep0QvAqbzo__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
-            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__aD3_gSmd5qRTY-WWrYHU87zl4PZUZDXoJLzJOWg9HSI__nhmRN7kiSHUfoKZw3CGJcdKgizAi7XejBBhN9xlHrXI__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
-            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__AuE0zpjILclZVFocL-ZM_YXQWNoEoAVRINeuje2TfMs__sJjd_Hk7JHvFHc9oGZN1umGSO06armIXgPwfzwRjp9o__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
-        </div> -->
+        
         <div id="category_product">
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__OexypFlT8flXz7FvooRgD3G-vlZUrFWY6iwAavQYb9g__uxC-ewtvp27vm6fOpO0YNr4pXT0awmP7N9aDX6TYj8o__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a> 
+            <!-- <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800" media="all" /> -->
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__BUKp1YBkiJCiTzrHIrRo6368Wj_UdH1gGLNe8fVvkOo__yN0qmw_84YWfViKBWGHnlTE1b4uhhEsYnsUyhRsEags__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a> 
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__Dzaf0U5ip5vc9JqcEko9Xu6OGopccClFn6T14epBOhg__d-hSiSUl7KMhpkIqy1lRJl3NgbGB9iJLz7hqcWAHRiY__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a> 
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__c8c4Dby7BHs--ueweizLsw9cZbEzDLO84Wo0GuqjaUE__duojKLhylv656LUETSHuKqQbbJo19g6dJh8VkhdDekA__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a> 
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__JSgPFJTl55zJts0Vtv_EzWyzlsSfyTI2nWAi400An3Y__ZwNMOv7kkzvhk_uU0YnpnzfFb9zbOOtkCU2HIDj04Pk__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a> 
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__aD3_gSmd5qRTY-WWrYHU87zl4PZUZDXoJLzJOWg9HSI__nhmRN7kiSHUfoKZw3CGJcdKgizAi7XejBBhN9xlHrXI__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a> 
+            <!-- <style type="text/css" media="all">
+                #sliding-popup.sliding-popup-bottom,#sliding-popup.sliding-popup-bottom .eu-cookie-withdraw-banner,.eu-cookie-withdraw-tab{background:#0779BF;}#sliding-popup.sliding-popup-bottom.eu-cookie-withdraw-wrapper{background:transparent}#sliding-popup .popup-content #popup-text h1,#sliding-popup .popup-content #popup-text h2,#sliding-popup .popup-content #popup-text h3,#sliding-popup .popup-content #popup-text p,.eu-cookie-compliance-more-button,.eu-cookie-compliance-secondary-button,.eu-cookie-withdraw-tab{color:#ffffff !important;}.eu-cookie-withdraw-tab{border-color:#ffffff;}
+            </style> -->
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__AuE0zpjILclZVFocL-ZM_YXQWNoEoAVRINeuje2TfMs__sJjd_Hk7JHvFHc9oGZN1umGSO06armIXgPwfzwRjp9o__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a> 
 
         </div>
         <div id="y_tuong">
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__4EbVblBhHnWEIMpD8Tawl4Vphv-36blJBwzlU_57IF8__TMjtw3y4-X1s077ePg-bfjhGGV3xaf1Uosf8EknqJr4__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css" /></a> 
+            <!-- <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800" media="all" /> -->
+
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__BUKp1YBkiJCiTzrHIrRo6368Wj_UdH1gGLNe8fVvkOo__yN0qmw_84YWfViKBWGHnlTE1b4uhhEsYnsUyhRsEags__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css" /></a> 
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__Dzaf0U5ip5vc9JqcEko9Xu6OGopccClFn6T14epBOhg__d-hSiSUl7KMhpkIqy1lRJl3NgbGB9iJLz7hqcWAHRiY__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css" /></a> 
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__c8c4Dby7BHs--ueweizLsw9cZbEzDLO84Wo0GuqjaUE__duojKLhylv656LUETSHuKqQbbJo19g6dJh8VkhdDekA__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css" /></a> 
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__JSgPFJTl55zJts0Vtv_EzWyzlsSfyTI2nWAi400An3Y__ZwNMOv7kkzvhk_uU0YnpnzfFb9zbOOtkCU2HIDj04Pk__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css" /></a> 
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__aD3_gSmd5qRTY-WWrYHU87zl4PZUZDXoJLzJOWg9HSI__nhmRN7kiSHUfoKZw3CGJcdKgizAi7XejBBhN9xlHrXI__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css" /></a> 
+            <!-- <style type="text/css" media="all">
+                #sliding-popup.sliding-popup-bottom,#sliding-popup.sliding-popup-bottom .eu-cookie-withdraw-banner,.eu-cookie-withdraw-tab{background:#0779BF;}#sliding-popup.sliding-popup-bottom.eu-cookie-withdraw-wrapper{background:transparent}#sliding-popup .popup-content #popup-text h1,#sliding-popup .popup-content #popup-text h2,#sliding-popup .popup-content #popup-text h3,#sliding-popup .popup-content #popup-text p,.eu-cookie-compliance-more-button,.eu-cookie-compliance-secondary-button,.eu-cookie-withdraw-tab{color:#ffffff !important;}.eu-cookie-withdraw-tab{border-color:#ffffff;}
+            </style> -->
             <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__iW147tHv1qaS4jveQgrzW-4C-hZq8stS3RMnloRkg6Q__uqcVND_Mvj1baBqjCyS9glvlkzJ4vG9UTLjj6vGbsak__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css" /></a>        
+        </div>
+        <div id="list_product">
+            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__OexypFlT8flXz7FvooRgD3G-vlZUrFWY6iwAavQYb9g__uxC-ewtvp27vm6fOpO0YNr4pXT0awmP7N9aDX6TYj8o__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
+            <!-- <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800" media="all" /> -->
+            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__BUKp1YBkiJCiTzrHIrRo6368Wj_UdH1gGLNe8fVvkOo__yN0qmw_84YWfViKBWGHnlTE1b4uhhEsYnsUyhRsEags__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
+            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__Dzaf0U5ip5vc9JqcEko9Xu6OGopccClFn6T14epBOhg__d-hSiSUl7KMhpkIqy1lRJl3NgbGB9iJLz7hqcWAHRiY__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
+            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__c8c4Dby7BHs--ueweizLsw9cZbEzDLO84Wo0GuqjaUE__duojKLhylv656LUETSHuKqQbbJo19g6dJh8VkhdDekA__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
+            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__JSgPFJTl55zJts0Vtv_EzWyzlsSfyTI2nWAi400An3Y__ZwNMOv7kkzvhk_uU0YnpnzfFb9zbOOtkCU2HIDj04Pk__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
+            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__aD3_gSmd5qRTY-WWrYHU87zl4PZUZDXoJLzJOWg9HSI__nhmRN7kiSHUfoKZw3CGJcdKgizAi7XejBBhN9xlHrXI__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
+            <!-- <style type="text/css" media="all">
+                #sliding-popup.sliding-popup-bottom,#sliding-popup.sliding-popup-bottom .eu-cookie-withdraw-banner,.eu-cookie-withdraw-tab{background:#0779BF;}#sliding-popup.sliding-popup-bottom.eu-cookie-withdraw-wrapper{background:transparent}#sliding-popup .popup-content #popup-text h1,#sliding-popup .popup-content #popup-text h2,#sliding-popup .popup-content #popup-text h3,#sliding-popup .popup-content #popup-text p,.eu-cookie-compliance-more-button,.eu-cookie-compliance-secondary-button,.eu-cookie-withdraw-tab{color:#ffffff !important;}.eu-cookie-withdraw-tab{border-color:#ffffff;}
+            </style> -->
+            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__teaQsTj9Q2C9ajhf4PKJE1GmrVNLXIl1BPtMj0nEZdk__82p7aCR4_vyTIzdYYZsS1W0fsxC9S7G_gL5vHOG-Y8w__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
+        </div>
+        <div id="detail_product">
+            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__EzZUCfqeF4OkK6RS_0dEtrOcr34XsvxqHJA7N3m6Pqo__PjhnkvoSFoUSeoC80tJd0tegVQaZwizMtNhxZnLRNzo__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
+            <!-- <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800" media="all" /> -->
+            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__BUKp1YBkiJCiTzrHIrRo6368Wj_UdH1gGLNe8fVvkOo__yN0qmw_84YWfViKBWGHnlTE1b4uhhEsYnsUyhRsEags__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
+            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__Dzaf0U5ip5vc9JqcEko9Xu6OGopccClFn6T14epBOhg__d-hSiSUl7KMhpkIqy1lRJl3NgbGB9iJLz7hqcWAHRiY__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
+            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__c8c4Dby7BHs--ueweizLsw9cZbEzDLO84Wo0GuqjaUE__duojKLhylv656LUETSHuKqQbbJo19g6dJh8VkhdDekA__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
+            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__JSgPFJTl55zJts0Vtv_EzWyzlsSfyTI2nWAi400An3Y__ZwNMOv7kkzvhk_uU0YnpnzfFb9zbOOtkCU2HIDj04Pk__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
+            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__aD3_gSmd5qRTY-WWrYHU87zl4PZUZDXoJLzJOWg9HSI__nhmRN7kiSHUfoKZw3CGJcdKgizAi7XejBBhN9xlHrXI__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
+            <!-- <style type="text/css" media="all">
+                #sliding-popup.sliding-popup-bottom,#sliding-popup.sliding-popup-bottom .eu-cookie-withdraw-banner,.eu-cookie-withdraw-tab{background:#0779BF;}#sliding-popup.sliding-popup-bottom.eu-cookie-withdraw-wrapper{background:transparent}#sliding-popup .popup-content #popup-text h1,#sliding-popup .popup-content #popup-text h2,#sliding-popup .popup-content #popup-text h3,#sliding-popup .popup-content #popup-text p,.eu-cookie-compliance-more-button,.eu-cookie-compliance-secondary-button,.eu-cookie-withdraw-tab{color:#ffffff !important;}.eu-cookie-withdraw-tab{border-color:#ffffff;}
+            </style> -->
+            <a class="link_css" href="https://www.dulux.vn/sites/www.dulux.vn/files/advagg_css/css__AuE0zpjILclZVFocL-ZM_YXQWNoEoAVRINeuje2TfMs__sJjd_Hk7JHvFHc9oGZN1umGSO06armIXgPwfzwRjp9o__IY9epI-mj_jUyCKMTKnYycFqUe7k0NLtv13O2_s2fYI.css"></a>
+            
         </div>
     </body>
     <script
