--- a/resources/views/crawler/crawler_colors.html
+++ b/resources/views/crawler/crawler_colors.html
@@ -158,7 +158,7 @@
         phong_tam: [],
         phong_an: []
       }
-      $('#color_popular').find('.color-box-child')
+      $('.color_popular').find('.color-box-child')
         .each((idx, item) => {
           let name = $(item).data('title');
           if (!popularColors.includes(name)) {
