--- a/resources/views/crawler/crawler_white.html
+++ b/resources/views/crawler/crawler_white.html
@@ -168,14 +168,14 @@
         .each((idx, item) => {
           let name = "" + $(item).data('title');
           if (!popularColors.includes(name)) {
-            popularColors.push(name);
+            popularColors.push("" + name);
           }
         });
       for (let surface of Object.keys(surfaces)) {
         $('#' + surface).find('.color-box-child')
           .each((idx, item) => {
             let name = "" + $(item).data('title');
-            surfaceColors[surface].push(name);
+            surfaceColors[surface].push("" + name);
           });
       }
 
@@ -183,7 +183,7 @@
         $('#' + project).find('.color-box-child')
           .each((idx, item) => {
             let name = "" + $(item).data('title');
-            projectColors[project].push(name);
+            projectColors[project].push("" + name);
           });
       }
       console.log(surfaceColors);
@@ -194,7 +194,7 @@
           let name = "" + $(item).data('title');
           let color = $(item).data('id');
           let colorDt = {
-            name: name,
+            name: "" + name,
             color: '#' + color,
             color_group_id: 1,
             mixed_by_computer: 1,
@@ -228,7 +228,7 @@
           let name = "" + $(item).data('title');
           let color = $(item).data('id');
           let colorDt = {
-            name: name,
+            name: "" + name,
             color: '#' + color,
             color_group_id: 1,
             mixed_by_computer: 1,
@@ -259,7 +259,7 @@
           let name = "" + $(item).data('title');
           let color = $(item).data('id');
           let colorDt = {
-            name: name,
+            name: "" + name,
             color: '#' + color,
             color_group_id: 1,
             mixed_by_computer: 0,
